# DatingBot

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
Practice Tasks/Practice1/: docker-compose.yml  task.md
Practice Tasks/Practice2/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
Practice Tasks/Practice3/: Dockerfile  README.md  docker-compose.yml  requirements.txt
Practice Tasks/Practice4/: anomalies_demo.py  docker-compose.yml  init.sql  report.md
alembic/: env.py
alembic/versions/: 05971ccd2ffd_add_is_like_to_likes.py  31b76ff2b25e_initial_tables.py  4faf50e12b8e_add_chats_messages_match_chat_id.py  62d2e65f9e63_add_user_id_to_chats.py  9b8ba712ef2e_add_likes_and_matches.py  ba10d005f5bc_initial_tables.py  e1ab28a662b9_add_rating_referral_user_fields.py  e1b514c3b929_add_is_active_to_profiles.py
app/: config.py  main.py
app/api/: deps.py  schemas.py
app/bot/: helpers.py  keyboards.py  main.py
app/db/: redis.py  session.py
app/events/: consumer.py  publisher.py
app/models/: __init__.py  base.py  chat.py  like.py  match.py  message.py  photo.py  profile.py  rating.py  referral.py  user.py
app/services/: cache_service.py  chat_service.py  match_service.py  profile_service.py  rating_service.py  referral_service.py  s3_service.py  user_service.py
app/workers/: celery_app.py  tasks.py
docker/: Dockerfile  nginx.conf
docs/: api.md  architecture.md  database.md  rating_system.md  stages.md
tests/: conftest.py  test_registration.py
(+82 files in other folders)
