[tool.poetry]
name = "dating-bot"
version = "0.1.0"
description = "Telegram dating bot with rating system"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
python-telegram-bot = "^21"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
alembic = "^1.14"
pydantic = "^2.0"
pydantic-settings = "^2.0"
redis = {extras = ["hiredis"], version = "^5.0"}
celery = "^5.4"
aioboto3 = "^13.0"
prometheus-client = "^0.21"
python-multipart = "^0.0.22"
aio-pika = "^9.6.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
httpx = "^0.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
